<resources>
    <string name="app_name">Places</string>
    <string name="add_place">Add place</string>
    <string name="title">Title</string>
    <string name="save">SAVE</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="no_places">No place saved</string>
    <string name="map">Map</string>
</resources>